AAPLUS-473: Fixed layout issue with tiltagtable columns not being equal with

--- a/web/css/aaplus-styles.css
+++ b/web/css/aaplus-styles.css
@@ -123,6 +123,12 @@ table .checkbox input[type=checkbox], table .checkbox-inline input[type=checkbox
     margin-left: 5px;
 }
 
+.table-tiltag td:first-child {
+    max-width: 150px;
+    min-width: 150px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 /**
  * Additional styles for BraincraftedBootstrapBundle
